# stack

./: CMakeLists.txt  build.bat
app/: main.cpp
app/include/: Node.h  Stack.h
